--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,8 +1,8 @@
 <div class="row-100-block">
     <div class="col-20"></div>
-    <div class="col-60 text-center blacked" style="border-radius: 10px 10px 0 0">
-        <h2 style="padding: 2vh 0"><b>Спортивные материалы</b></h2>
-        <div class="row-100">
+    <div class="col-60 text-center blacked">
+        <h2 style="padding: 2vh 0"><b>Домен Спорт</b></h2>
+        <!--<div class="row-100">
             <div class="col-100 my-slider transition-execute whited border" style="border: solid 1px darkblue">
                 <div class="row-100-block">
                     <span><b>Напишите нам через </b></span><img src="/img/gosuslugi-logo.svg" width="64" style="margin: 1vh">
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="col-20"></div>
 </div>
