--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -4,8 +4,8 @@
         <div class="row-100-block" th:if="${roleAdmin} or ${roleModerator}">
             <div class="col-100-inline-flex">
                 <div class="flex-center" style="width: 100%">
-                    <form th:method="POST" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%" th:object="${search}">
-                        <input type="search" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 100%" th:field="*{searchMessage}">
+                    <form th:method="GET" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%">
+                        <input type="search" id="search" name="search" placeholder="Введите свой запрос здесь" style="display: inline-block; padding: 0.5vh; width: 100%">
                     </form>
                 </div>
             </div>
@@ -13,8 +13,8 @@
         <div class="row-100" th:if="${rolePublisher}">
             <div class="col-70-inline-flex">
                 <div class="flex-center" style="width: 100%">
-                    <form th:method="POST" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%" th:object="${search}">
-                        <input type="search" placeholder="поиск материалов" style="display: inline-block; padding: 0.5vh; width: 100%" th:field="*{searchMessage}">
+                    <form th:method="GET" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%">
+                        <input type="search" id="search" name="search" placeholder="Введите свой запрос здесь" style="display: inline-block; padding: 0.5vh; width: 100%">
                     </form>
                 </div>
             </div>
