--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -1,7 +1,7 @@
 <div class="row-100-block">
     <div class="col-20"></div>
     <div class="col-60" style="display: flex">
-        <div class="row-100-block" th:if="${roleAdmin} or ${roleModerator}">
+        <div class="row-100-block" th:if="${roleAdmin} or ${roleMainModerator} or ${roleModerator}">
             <div class="col-100-inline-flex">
                 <div class="flex-center" style="width: 100%">
                     <form th:method="GET" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%">
