update: 19-01-2024 (dd-MM-yyyy)
add main moderator

--- a/src/main/resources/templates/content/edit-post-page.html
+++ b/src/main/resources/templates/content/edit-post-page.html
@@ -63,7 +63,9 @@
                         <a th:href="@{/material}" class="link-button-simple">Назад</a>
                         <input class="input-button" id="inputButtonFake" type="submit" value="Обновить" hidden disabled="disabled">
                         <input class="input-button" id="inputButton" type="submit" value="Обновить" onclick="hiddenControl()">
-                        <a th:href="@{/material/post/verify/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleMainModerator}">Опубликовать</a>
+                        <a th:href="@{/material/post/verify/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleModerator}">Проверенно</a>
+                        <a th:href="@{/material/off/verified/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleMainModerator}">Отменить проверку</a>
+                        <a th:href="@{/material/post/allowed/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleMainModerator}">Опубликовать</a>
                         <a th:href="@{/material/post/delete/{id}(id=${post.getId()})}" class="link-button-simple float-right">Удалить</a>
                     </div>
                     <script>
