--- a/src/main/resources/templates/content/post-page.html
+++ b/src/main/resources/templates/content/post-page.html
@@ -31,7 +31,7 @@
                 <p class="flex-center" th:text="${file.getName()}"></p>
             </div>
             <div class="col-33" style="display: inline-flex">
-                <a th:href="@{/material/off/verified/{id}(id=${post.getId()})}" class="link-button-simple flex-center">Снять с публикации</a>
+                <a th:href="@{/material/off/allowed/{id}(id=${post.getId()})}" class="link-button-simple flex-center">Снять с публикации</a>
             </div>
         </div>
         <div class="row-100-block text-center" style="padding: 2vh">
