--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,8 +1,26 @@
+<div class="row">
+    <form id="logoutForm" method="post" th:action="@{/logout}"></form>
+    <div class="small-2 large-5 columns" style="padding: 1vh"></div>
+    <div class="small-4 large-2 columns">
+        <img alt="домен спорт" class="header_logo_sreda" src="/img/logo.png">
+    </div>
+    <div class="small-6 large-5 columns top-menu-rightbloc">
+        <img alt="поиск" class="top-icon" src="/img/icon-serch.png">
+        ПОИСК
+        <img alt="поиск" class="top-icon1" src="/img/icon-login.png">
+        <a id="login" th:href="@{/auth/login}" th:if="${!baseAuth}" style="text-decoration: none; color: black;">ВОЙТИ</a>
+        <a id="logout" href="#" onclick="document.getElementById('logoutForm').submit()" th:if="${baseAuth}" style="text-decoration: none; color: black;">ВЫЙТИ</a>
+    </div>
+</div>
+
+
+
+<!--
 <div class="row-100-block">
     <div class="col-20"></div>
     <div class="col-60 text-center blacked">
         <h2 style="padding: 2vh 0"><b>Домен Спорт</b></h2>
-        <!--<div class="row-100">
+        &lt;!&ndash;<div class="row-100">
             <div class="col-100 my-slider transition-execute whited border" style="border: solid 1px darkblue">
                 <div class="row-100-block">
                     <span><b>Напишите нам через </b></span><img src="/img/gosuslugi-logo.svg" width="64" style="margin: 1vh">
@@ -26,7 +44,7 @@
                     </div>
                 </div>
             </div>
-        </div>-->
+        </div>&ndash;&gt;
     </div>
     <div class="col-20"></div>
-</div>
+</div>-->
