update 23.01.2024 [dd.MM.yyyy] - added new frontend for login-page/main-page/post-page

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,7 +2,9 @@
     <form id="logoutForm" method="post" th:action="@{/logout}"></form>
     <div class="small-2 large-5 columns" style="padding: 1vh"></div>
     <div class="small-4 large-2 columns">
-        <img alt="домен спорт" class="header_logo_sreda" src="/img/logo.png">
+        <a th:href="@{/}">
+            <img alt="домен спорт" class="header_logo_sreda" src="/img/logo.png">
+        </a>
     </div>
     <div class="small-6 large-5 columns top-menu-rightbloc">
         <img alt="поиск" class="top-icon" src="/img/icon-serch.png">
