--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -9,8 +9,8 @@
         <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
         <script src="https://api-maps.yandex.ru/2.1/?apikey=7c13cf7d-c937-4ca6-8021-145ac16bdcae&lang=ru_RU" type="text/javascript"></script>
-        <link href="/css/grid.css" rel="stylesheet">
-        <link href="/css/color-and-align.css" rel="stylesheet">
+        <!--<link href="/css/grid.css" rel="stylesheet">
+        <link href="/css/color-and-align.css" rel="stylesheet">-->
         <link href="/css/map.css" rel="stylesheet">
         <link href="/css/index.css" rel="stylesheet">
         <link href="/css/fonts.css" rel="stylesheet">
