update: 06-02-2024 (dd-MM-yyyy) - added mechanics for bookmark

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -17,8 +17,7 @@
 
 
 
-<!--
-<div class="row-100-block">
+<!--<div class="row-100-block">
     <div class="col-20"></div>
     <div class="col-60 text-center blacked">
         <h2 style="padding: 2vh 0"><b>Домен Спорт</b></h2>
